update post PhD

--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Mathieu Nassif is a PhD student in Computer Science at McGill University, under the supervision of Martin Robillard. His research interests include software engineering, design, and documentation, as well as knowledge management.">
+  <meta name="description" content="Mathieu Nassif recently completed his PhD degree in Computer Science at McGill University, under the supervision of Martin Robillard. His research interests include human aspects of software engineering, software design, documentation, and knowledge management.">
   <meta name="keywords" content="Mathieu Nassif, Nassif Mathieu, mnassif, nassifm">
   <meta name="author" content="Mathieu Nassif">
   <title>Mathieu Nassif</title>
 
   <link href="assets/css/bootstrap.css" rel="stylesheet">
   <link href="assets/css/custom-style.css" rel="stylesheet">
-  <link href="https://www.cs.mcgill.ca/~mnassif/" rel="canonical">
+  <link href="https://nassifm.github.io/" rel="canonical">
 </head>
 
 <body data-spy="scroll" data-target="#topNavbar">
   <header>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="index.html">Mathieu Nassif</a>
+      <a class="navbar-brand" href="#">Mathieu Nassif</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar"
         aria-controls="topNavbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -30,6 +30,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#Publications">Publications</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#Service">Service</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#Recognitions">Recognitions</a>
@@ -54,23 +57,11 @@
           </p>
         </div>
         <div class="col-xl-auto col-lg-8 col-sm-7">
-          <h3>Mathieu Nassif</h3>
-          <h5>Ph.D. Student</h5>
-          <p>
-            Supervised by <a href="https://www.cs.mcgill.ca/~martin/">Prof. Martin P. Robillard</a><br />
-            <a href="https://www.cs.mcgill.ca/~martin/students.html">McGill Software Technology Lab</a><br />
-            <a href="https://www.cs.mcgill.ca/">School of Computer Science</a><br />
-            <a href="https://mcgill.ca/">McGill University</a>
-          </p>
+          <h3>Mathieu Nassif, <small>Ph.D.</small></h3>
           <address>
-            <p>
-              McConnell Engineering Bldg., Room 225<br />
-              3480 University St.<br />
-              Montréal, QC, H3A 0E9<br />
-              Canada
-            </p>
             <ul>
               <li><img src="assets/img/email-icon.png" alt="Email Icon" class="text-icon" /> Email: mnassif<span class="invisible"> [REMOVE THIS] </span>@cs<span class="invisible"> [AND THIS] </span>.mcgill.<span class="invisible"> [AND THAT] </span>ca</li>
+              <li><img src="assets/img/mastodon-icon.svg" alt="Mastodon Icon" class="text-icon" /> Mastodon: <a href="https://social.sigsoft.org/@mnassif">@mnassif@social.sigsoft.org</a></li>
               <li><img src="assets/img/github-icon.png" alt="GitHub Icon" class="text-icon" /> GitHub: <a href="https://github.com/nassifm">nassifm</a></li>
               <li><img src="assets/img/scholar-icon.png" alt="Google Scholar Icon" class="text-icon" /> Google Scholar: <a href="https://scholar.google.com/citations?user=TeuXRvAAAAAJ">Mathieu Nassif</a></li>
               <li><img src="assets/img/dblp-icon.png" alt="DBLP Icon" class="text-icon"> DBLP: <a href="https://dblp.uni-trier.de/pers/hd/n/Nassif:Mathieu">Mathieu Nassif</a></li>
@@ -81,24 +72,19 @@
         <div class="col">
           <h5>Biography</h5>
           <p>
-            Mathieu Nassif is a Ph.D. student in Computer Science at McGill University. His research focuses
-            on the extraction, representation, and manipulation of knowledge in software systems to optimize
-            the contribution of developers.
+            I recently completed my Ph.D. in Computer Science at <a href="https://mcgill.ca/">McGill University</a>, under the supervision of <a href="https://www.cs.mcgill.ca/~martin/">Prof. Martin P. Robillard</a> in the <a href="https://www.cs.mcgill.ca/~martin/students.html">Software Technology Lab</a>. My thesis focused on the presentation of software documentation, particularly API usage tutorials. Part of my work included the development of <a href="https://www.cs.mcgill.ca/~martin/casdoc/">Casdoc</a>, a documentation format oriented around code examples. Casdoc documents are <a href="https://codesample.info/">available online</a>.
           </p>
           <p>
-            Mathieu received a M.Sc. in Computer Science from McGill University in 2018. His thesis explored
-            a flexible approach to embed documentation directly in source code to reduce the redundancy of
-            information in software systems while improving documentation
-            quality. Mathieu received a B.Sc. in Mathematics from Université de Montréal in 2016.
+            I received a M.Sc. in Computer Science from McGill University in 2018. My thesis explored a flexible approach to embed documentation directly in source code to reduce the redundancy of information in software systems while improving documentation quality. I received a B.Sc. in Mathematics from Université de Montréal in 2016.
           </p>
           <h5>Research Keywords</h5>
           <ul class="inline">
             <li>Software engineering</li>
-            <li>Software maintenance</li>
+            <li>Human aspects</li>
             <li>Software documentation</li>
             <li>Knowledge management</li>
-            <li>Knowledge extraction</li>
             <li>Knowledge transfer</li>
+            <li>Program comprehension</li>
           </ul>
         </div>
       </div>
@@ -108,52 +94,84 @@
       <h2>Publications</h2>
       <ul class="twolevels">
         <li>
+          <strong>2024</strong>
+          <ul>
+            <li>Mathieu Nassif. <a href="https://www.cs.mcgill.ca/~martin/theses/phd-nassif-2024.pdf">On-Demand Documentation via Code Examples</a>. Doctoral Thesis, <em>McGill University</em>, 261 pages, 2024.</li>
+            <li>Martin P. Robillard, Mathieu Nassif, and Muhammad Sohail. <a href="https://www.cs.mcgill.ca/~martin/papers/2024-tosem-testing.pdf">Understanding Test Convention Consistency as a Dimension of Test Quality</a>. To appear in <em>ACM Transactions on Software Engineering and Methodology</em>, 38 pages, 2024.</li>
+            <li>Martin P. Robillard, Deeksha M. Arya, Neil A. Ernst, Jin L. C. Guo, Maxime Lamothe, Mathieu Nassif, Nicole Novielli, Alexander Serebrenik, Igor Steinmacher, and Klaas-Jan Stol. <a href="https://doi.org/10.1145/3649598">Communicating Study Design Trade-offs in Software Engineering</a>. New Frontiers of Software Engineering. In <em>ACM Transactions on Software Engineering and Methodology</em>, 33(5), article 112, 10 pages, 2024.</li>
+          </ul>
+        </li>
+        <li>
           <strong>2023</strong>
           <ul>
-            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2023.3265855">Identifying Concepts in Software Projects</a>. To appear in <em>IEEE Transactions on Software Engineering</em>, 15 pages, April, 2023</li>
-            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1145/3544549.3585767">A Field Study of Developer Documentation Format</a>. Late-Breaking Work. In <em>Proceedings of the ACM CHI Conference on Human Factors in Computing Systems - Extended Abstracts</em>, 7 pages, April, 2023</li>
+            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://arxiv.org/abs/2311.18057">Non Linear Software Documentation with Interactive Code Examples</a>. <em>ArXiv preprint</em>, arXiv:2311.18057, 29 pages, 2023.</li>
+            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2023.3265855">Identifying Concepts in Software Projects</a>. In <em>IEEE Transactions on Software Engineering</em>, 49(7), pages 3660-3674, 2023.</li>
+            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1145/3544549.3585767">A Field Study of Developer Documentation Format</a>. Late-Breaking Work. In <em>Proceedings of the ACM CHI Conference on Human Factors in Computing Systems - Extended Abstracts</em>, article 7, 7 pages, 2023.</li>
           </ul>
         </li>
         <li>
           <strong>2022</strong>
           <ul>
-            <li>Mathieu Nassif, Alexa Hernandez, Ashvitha Sridharan, and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2021.3087087">Generating Unit Tests for Documentation</a>. In <em>IEEE Transactions on Software Engineering</em>, 48(9): 3268-3279, September, 2022.</li>
-            <li>Mathieu Nassif, Zara Horlacher, and Martin P. Robillard. <a href="https://doi.org/10.1145/3524610.3527875">Casdoc: Unobtrusive Explanations in Code Examples</a>. Research Demonstration. In <em>Proceedings of the 30th IEEE International Conference on Program Comprehension</em>, pages 631-635, May, 2022.</li>
-            <li>Alexa Hernandez, Mathieu Nassif, and Martin P. Robillard. <a href="https://doi.org/10.1145/3510454.3516856">DScribe: Co-generating Unit Tests and Documentation</a>. Research Demonstration. In <em>Proceedings of the 44th ACM/IEEE International Conference on Software Engineering</em>, pages 56-60, May, 2022.</li>
-            <li>Deeksha M. Arya, Mathieu Nassif, and Martin P. Robillard. <a href="https://doi.org/10.1109/MS.2021.3090978">A Data-Centric Study of Software Tutorial Design</a>. In <em>IEEE Software</em>, 39(3):106-115, June, 2022.</li>
+            <li>Mathieu Nassif, Alexa Hernandez, Ashvitha Sridharan, and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2021.3087087">Generating Unit Tests for Documentation</a>. In <em>IEEE Transactions on Software Engineering</em>, 48(9), pages 3268-3279, 2022.</li>
+            <li>Mathieu Nassif, Zara Horlacher, and Martin P. Robillard. <a href="https://doi.org/10.1145/3524610.3527875">Casdoc: Unobtrusive Explanations in Code Examples</a>. Research Demonstration. In <em>Proceedings of the 30th IEEE International Conference on Program Comprehension</em>, pages 631-635, 2022.</li>
+            <li>Alexa Hernandez, Mathieu Nassif, and Martin P. Robillard. <a href="https://doi.org/10.1145/3510454.3516856">DScribe: Co-generating Unit Tests and Documentation</a>. Research Demonstration. In <em>Proceedings of the 44th ACM/IEEE International Conference on Software Engineering</em>, pages 56-60, 2022.</li>
+            <li>Deeksha M. Arya, Mathieu Nassif, and Martin P. Robillard. <a href="https://doi.org/10.1109/MS.2021.3090978">A Data-Centric Study of Software Tutorial Design</a>. In <em>IEEE Software</em>, 39(3), pages 106-115, 2022.</li>
           </ul>
         </li>
         <li>
           <strong>2021</strong>
           <ul>
-            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1007/s10664-020-09918-4">Wikifying Software Artifacts</a>. In <em>Empirical Software Engineering</em>, 26(2): 31:1-31:31, March, 2021.</li>
+            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1007/s10664-020-09918-4">Wikifying Software Artifacts</a>. In <em>Empirical Software Engineering</em>, 26(2), article 31, 31 pages, 2021.</li>
           </ul>
         </li>
         <li>
           <strong>2020</strong>
           <ul>
-            <li>Mathieu Nassif, Christoph Treude, and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2018.2836450">Automatically Categorizing Software Technologies</a>. In <em>IEEE Transactions on Software Engineering</em>, 46(1):20-32, January, 2020.</li>
+            <li>Mathieu Nassif, Christoph Treude, and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2018.2836450">Automatically Categorizing Software Technologies</a>. In <em>IEEE Transactions on Software Engineering</em>, 46(1), pages 20-32, 2020.</li>
           </ul>
         </li>
         <li>
           <strong>2019</strong>
           <ul>
-            <li>Mathieu Nassif, Christoph Treude, and Martin P. Robillard. <a href="https://doi.org/10.1109/ICSE-Companion.2019.00039">Witt: Querying Technology Terms Based on Automated Classification</a>. Research Demonstration. In <em>Companion Proceedings of the 41st IEEE/ACM International Conference on Software Engineering</em>, pages 53-66, May, 2019.</li>
-            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1109/ICSE-Companion.2019.00128">Constructural Software Documentation</a>. Extended Abstract. In <em>Companion Proceedings of the 41st IEEE/ACM International Conference on Software Engineering</em>, pages 308-309, May, 2019.</li>
+            <li>Mathieu Nassif, Christoph Treude, and Martin P. Robillard. <a href="https://doi.org/10.1109/ICSE-Companion.2019.00039">Witt: Querying Technology Terms Based on Automated Classification</a>. Research Demonstration. In <em>Companion Proceedings of the 41st IEEE/ACM International Conference on Software Engineering</em>, pages 63-66, 2019.</li>
+            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1109/ICSE-Companion.2019.00128">Constructural Software Documentation</a>. Extended Abstract. In <em>Companion Proceedings of the 41st IEEE/ACM International Conference on Software Engineering</em>, pages 308-309, 2019.</li>
           </ul>
         </li>
         <li>
           <strong>2018</strong>
           <ul>
-            <li>Mathieu Nassif. <a href="https://escholarship.mcgill.ca/concern/theses/nz806219k">Embedding Constructural Documentation in Unit Tests</a>. Master's Thesis. <em>McGill University</em>, 111 pages, October, 2018.</li>
-            <li>Martin P. Robillard, Mathieu Nassif, and Shane McIntosh. <a href="https://doi.org/10.1109/ICSME.2018.00009">Threats of Aggregating Software Repository Data</a>. In <em>Proceedings of the 34th IEEE International Conference on Software Maintenance and Evolution</em>, pages 508-518, September, 2018.</li>
+            <li>Mathieu Nassif. <a href="https://escholarship.mcgill.ca/concern/theses/nz806219k">Embedding Constructural Documentation in Unit Tests</a>. Master's Thesis. <em>McGill University</em>, 111 pages, 2018.</li>
+            <li>Martin P. Robillard, Mathieu Nassif, and Shane McIntosh. <a href="https://doi.org/10.1109/ICSME.2018.00009">Threats of Aggregating Software Repository Data</a>. In <em>Proceedings of the 34th IEEE International Conference on Software Maintenance and Evolution</em>, pages 508-518, 2018.</li>
           </ul>
         </li>
         <li>
           <strong>2017</strong>
           <ul>
-            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1109/ICSME.2017.64">Revisiting Turnover-Induced Knowledge Loss in Software Projects</a>. In <em>Proceedings of the 33rd IEEE International Conference on Software Maintenance and Evolution</em>, pages 261–272, September, 2017.
-            </li>
+            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1109/ICSME.2017.64">Revisiting Turnover-Induced Knowledge Loss in Software Projects</a>. In <em>Proceedings of the 33rd IEEE International Conference on Software Maintenance and Evolution</em>, pages 261–272, 2017.</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+
+    <div class="screen" id="Service">
+      <h2>Service</h2>
+      <ul class="twolevels">
+        <li><strong>Reviewer</strong>
+          <ul>
+            <li>IEEE Symposium on Visual Languages and Human-Centric Computing (VL/HCC), Workshops and Tutorials, 2024</li>
+            <li>Journal of Systems and Software (JSS), 2024</li>
+            <li>ACM Conference on Designing Interactive Systems (DIS), 2024</li>
+            <li>International Conference on Evaluation and Assessment in Software Engineering (EASE), 2024</li>
+            <li>ACM Transactions on Software Engineering and Methodology (TOSEM), 2022, 2023</li>
+            <li>International Conference on Mining Software Repositories (MSR), Data and Tool Showcase, 2023</li>
+            <li>IEEE Transactions on Software Engineering (TSE), 2021</li>
+          </ul>
+        </li>
+        <li><strong>Subreviewer</strong>
+          <ul>
+            <li>ACM/IEEE International Conference on Software Engineering (ICSE), 2022, 2024</li>
+            <li>ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE), 2021</li>
+            <li>ACM Technical Symposium on Computer Science Education (SIGCSE TS), 2021</li>
           </ul>
         </li>
       </ul>
@@ -239,7 +257,7 @@
     <span class="line">Built with <a href="https://getbootstrap.com/">Bootstrap v4.5</a>.</span>
     <span class="line">© 2020 Mathieu Nassif</span>
     <br/>
-    <span class="line"><small><em>Last update: 19 April 2023</em></small></span>
+    <span class="line"><small><em>Last update: 10 September 2024</em></small></span>
   </footer>
 
   <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
