--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <li>2018-2022: <a
                 href="http://www.frqnt.gouv.qc.ca/bourses-et-subventions/consulter-les-programmes-remplir-une-demande/bourse/bourses-de-2supesup-et-3supesup-cycles-ipnil6or1497465925673">FRQNT
                 Bourse de doctorat en recherche</a></li>
-            <li>Summer 2015: <a href="http://ism.uqam.ca/scholarships/#4">ISM Bourse d'été de premier cycle</a></li>
+            <li>2015: <a href="http://ism.uqam.ca/scholarships/#4">ISM Bourse d'été de premier cycle</a></li>
           </ul>
         </li>
         <li><strong>Others</strong>
@@ -201,7 +201,7 @@
             <li>2023: Globalink Research Award, <em>Mitacs</em></li>
             <li>2023: Graduate Mobility Award, <em>McGill</em></li>
             <li>2016–2017, 2020–2024: Graduate Excellence Award, <em>McGill</em></li>
-            <li>2018–2020, 2022: Graduate Research Enhancement and Travel (GREAT) Award, <em>McGill</em></li>
+            <li>2018–2020, 2022, 2024: Graduate Research Enhancement and Travel (GREAT) Award, <em>McGill</em></li>
             <li>2018, 2019: Lorne Trottier Fellowship, <em>McGill</em></li>
           </ul>
         </li>
@@ -259,7 +259,7 @@
     <span class="line">Built with <a href="https://getbootstrap.com/">Bootstrap v4.5</a>.</span>
     <span class="line">© 2020 Mathieu Nassif</span>
     <br/>
-    <span class="line"><small><em>Last update: 10 September 2024</em></small></span>
+    <span class="line"><small><em>Last update: 19 September 2024</em></small></span>
   </footer>
 
   <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
