correct GREAT award dates

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <li>2023: Globalink Research Award, <em>Mitacs</em></li>
             <li>2023: Graduate Mobility Award, <em>McGill</em></li>
             <li>2016–2017, 2020–2024: Graduate Excellence Award, <em>McGill</em></li>
-            <li>2018–2020, 2022, 2024: Graduate Research Enhancement and Travel (GREAT) Award, <em>McGill</em></li>
+            <li>2018–2020, 2023–2024: Graduate Research Enhancement and Travel (GREAT) Award, <em>McGill</em></li>
             <li>2018, 2019: Lorne Trottier Fellowship, <em>McGill</em></li>
           </ul>
         </li>
