--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@
         <li>
           <strong>2024</strong>
           <ul>
-            <li>Mathieu Nassif. <a href="https://www.cs.mcgill.ca/~martin/theses/phd-nassif-2024.pdf">On-Demand Documentation via Code Examples</a>. Doctoral Thesis, <em>McGill University</em>, 261 pages, 2024.</li>
-            <li>Martin P. Robillard, Mathieu Nassif, and Muhammad Sohail. <a href="https://www.cs.mcgill.ca/~martin/papers/2024-tosem-testing.pdf">Understanding Test Convention Consistency as a Dimension of Test Quality</a>. To appear in <em>ACM Transactions on Software Engineering and Methodology</em>, 38 pages, 2024.</li>
+            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://arxiv.org/abs/2311.18057">Non-Linear Software Documentation with Interactive Code Examples</a>. To appear in <em>ACM Transactions on Software Engineering and Methodology</em>, Continuous Special Section on Human-Centric Software Engineering, 32 pages, 2024.</li>
+            <li>Mathieu Nassif. <a href="pdfs/thesis-2024.pdf">On-Demand Documentation via Code Examples</a>. Doctoral Thesis, <em>McGill University</em>, 261 pages, 2024.</li>
+            <li>Martin P. Robillard, Mathieu Nassif, and Muhammad Sohail. <a href="https://doi.org/10.1145/3672448">Understanding Test Convention Consistency as a Dimension of Test Quality</a>. To appear in <em>ACM Transactions on Software Engineering and Methodology</em>, 38 pages, 2024.</li>
             <li>Martin P. Robillard, Deeksha M. Arya, Neil A. Ernst, Jin L. C. Guo, Maxime Lamothe, Mathieu Nassif, Nicole Novielli, Alexander Serebrenik, Igor Steinmacher, and Klaas-Jan Stol. <a href="https://doi.org/10.1145/3649598">Communicating Study Design Trade-offs in Software Engineering</a>. New Frontiers of Software Engineering. In <em>ACM Transactions on Software Engineering and Methodology</em>, 33(5), article 112, 10 pages, 2024.</li>
           </ul>
         </li>
         <li>
           <strong>2023</strong>
           <ul>
-            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://arxiv.org/abs/2311.18057">Non Linear Software Documentation with Interactive Code Examples</a>. <em>arXiv preprint</em>, arXiv:2311.18057, 28 pages, 2023.</li>
             <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2023.3265855">Identifying Concepts in Software Projects</a>. In <em>IEEE Transactions on Software Engineering</em>, 49(7), pages 3660-3674, 2023.</li>
             <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1145/3544549.3585767">A Field Study of Developer Documentation Format</a>. Late-Breaking Work. In <em>Proceedings of the ACM CHI Conference on Human Factors in Computing Systems - Extended Abstracts</em>, article 7, 7 pages, 2023.</li>
           </ul>
@@ -259,7 +259,7 @@
     <span class="line">Built with <a href="https://getbootstrap.com/">Bootstrap v4.5</a>.</span>
     <span class="line">© 2020 Mathieu Nassif</span>
     <br/>
-    <span class="line"><small><em>Last update: 19 September 2024</em></small></span>
+    <span class="line"><small><em>Last update: 25 October 2024</em></small></span>
   </footer>
 
   <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
