update pubs and service

--- a/index.html
+++ b/index.html
@@ -94,11 +94,17 @@
       <h2>Publications</h2>
       <ul class="twolevels">
         <li>
+          <strong>2025</strong>
+          <ul>
+            <li>Mathieu Nassif and Martin P. Robillard. <a href="#">Evaluating Interactive Documentation for Programmers</a>. To appear in <em>Empirical Software Engineering</em>, 29 pages, 2025.</li>
+            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1145/3702976">Non-Linear Software Documentation with Interactive Code Examples</a>. In <em>ACM Transactions on Software Engineering and Methodology</em>, Continuous Special Section on Human-Centric Software Engineering, 34(2), article 54, 32 pages, 2025.</li>
+            <li>Martin P. Robillard, Mathieu Nassif, and Muhammad Sohail. <a href="https://doi.org/10.1145/3672448">Understanding Test Convention Consistency as a Dimension of Test Quality</a>. In <em>ACM Transactions on Software Engineering and Methodology</em>, 34(1), article 4, 38 pages, 2025.</li>
+          </ul>
+        </li>
+        <li>
           <strong>2024</strong>
           <ul>
-            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://arxiv.org/abs/2311.18057">Non-Linear Software Documentation with Interactive Code Examples</a>. To appear in <em>ACM Transactions on Software Engineering and Methodology</em>, Continuous Special Section on Human-Centric Software Engineering, 32 pages, 2024.</li>
             <li>Mathieu Nassif. <a href="pdfs/thesis-2024.pdf">On-Demand Documentation via Code Examples</a>. Doctoral Thesis, <em>McGill University</em>, 261 pages, 2024.</li>
-            <li>Martin P. Robillard, Mathieu Nassif, and Muhammad Sohail. <a href="https://doi.org/10.1145/3672448">Understanding Test Convention Consistency as a Dimension of Test Quality</a>. To appear in <em>ACM Transactions on Software Engineering and Methodology</em>, 38 pages, 2024.</li>
             <li>Martin P. Robillard, Deeksha M. Arya, Neil A. Ernst, Jin L. C. Guo, Maxime Lamothe, Mathieu Nassif, Nicole Novielli, Alexander Serebrenik, Igor Steinmacher, and Klaas-Jan Stol. <a href="https://doi.org/10.1145/3649598">Communicating Study Design Trade-offs in Software Engineering</a>. New Frontiers of Software Engineering. In <em>ACM Transactions on Software Engineering and Methodology</em>, 33(5), article 112, 10 pages, 2024.</li>
           </ul>
         </li>
@@ -158,20 +164,21 @@
       <ul class="twolevels">
         <li><strong>Reviewer</strong>
           <ul>
-            <li>IEEE Symposium on Visual Languages and Human-Centric Computing (VL/HCC), Workshops and Tutorials, 2024</li>
-            <li>Journal of Systems and Software (JSS), 2024</li>
-            <li>ACM Conference on Designing Interactive Systems (DIS), 2024</li>
-            <li>International Conference on Evaluation and Assessment in Software Engineering (EASE), 2024</li>
-            <li>ACM Transactions on Software Engineering and Methodology (TOSEM), 2022, 2023</li>
-            <li>International Conference on Mining Software Repositories (MSR), Data and Tool Showcase, 2023</li>
-            <li>IEEE Transactions on Software Engineering (TSE), 2021</li>
+            <li><strong>[EASE]</strong> International Conference on Evaluation and Assessment in Software Engineering, 2024, 2025</li>
+            <li><strong>[TOSEM]</strong> ACM Transactions on Software Engineering and Methodology, 2022, 2023, 2025</li>
+            <li><strong>[ASEJ]</strong> Automated Software Engineering Journal, 2024</li>
+            <li><strong>[VL/HCC]</strong> IEEE Symposium on Visual Languages and Human-Centric Computing, Workshops and Tutorials, 2024</li>
+            <li><strong>[JSS]</strong> Journal of Systems and Software, 2024</li>
+            <li><strong>[DIS]</strong> ACM Conference on Designing Interactive Systems, 2024</li>
+            <li><strong>[MSR]</strong> International Conference on Mining Software Repositories, Data and Tool Showcase, 2023</li>
+            <li><strong>[TSE]</strong> IEEE Transactions on Software Engineering, 2021</li>
           </ul>
         </li>
         <li><strong>Subreviewer</strong>
           <ul>
-            <li>ACM/IEEE International Conference on Software Engineering (ICSE), 2022, 2024</li>
-            <li>ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE), 2021</li>
-            <li>ACM Technical Symposium on Computer Science Education (SIGCSE TS), 2021</li>
+            <li><strong>[ICSE]</strong> ACM/IEEE International Conference on Software Engineering, 2022, 2024</li>
+            <li><strong>[ESEC/FSE]</strong> ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, 2021</li>
+            <li><strong>[SIGCSE TS]</strong> ACM Technical Symposium on Computer Science Education, 2021</li>
           </ul>
         </li>
       </ul>
@@ -259,7 +266,7 @@
     <span class="line">Built with <a href="https://getbootstrap.com/">Bootstrap v4.5</a>.</span>
     <span class="line">© 2020 Mathieu Nassif</span>
     <br/>
-    <span class="line"><small><em>Last update: 25 October 2024</em></small></span>
+    <span class="line"><small><em>Last update: 8 February 2025</em></small></span>
   </footer>
 
   <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
