--- a/index.html
+++ b/index.html
@@ -86,12 +86,9 @@
         </div>
         <div class="col">
           <h5>Biography</h5>
-          <p>
-            I am a guest researcher in the <a href="https://www.inf.uni-hamburg.de/en/inst/ab/mast/section-4-about.html">MAST group</a>, led by <a href="https://www.inf.uni-hamburg.de/en/inst/ab/mast/section-1-people/people-1-professor/maalej.html">Prof. Dr. Walid Maalej</a>, at <a href="https://www.uni-hamburg.de/en.html">University of Hamburg</a>. We are researching the cognitive factors that impact the interaction between developers and documentation, in the context of the recent changes caused by generative AI.
-          </p>
           <p>I will soon start as a lecturer (assistant professor) in the <a href="https://www.canterbury.ac.nz/study/academic-study/engineering/schools-and-departments-engineering-forestry-product-design/computer-science-and-software-engineering-department">Computer Science and Software Engineering department</a> at the <a href="https://www.canterbury.ac.nz/">University of Canterbury</a> in Christchurch, New Zealand.</p>
           <p>
-            I completed my Ph.D. in Computer Science at <a href="https://mcgill.ca/">McGill University</a> under the
+            I was previously a guest researcher in the <a href="https://www.inf.uni-hamburg.de/en/inst/ab/mast/section-4-about.html">MAST group</a>, led by <a href="https://www.inf.uni-hamburg.de/en/inst/ab/mast/section-1-people/people-1-professor/maalej.html">Prof. Dr. Walid Maalej</a>, at <a href="https://www.uni-hamburg.de/en.html">University of Hamburg</a>. I completed my Ph.D. in Computer Science at <a href="https://mcgill.ca/">McGill University</a> under the
             supervision of <a href="https://www.cs.mcgill.ca/~martin/">Prof. Martin P. Robillard</a> in the <a
               href="https://www.cs.mcgill.ca/~martin/students.html">Software Technology Lab</a>. My thesis focused on
             the presentation of software documentation, particularly API usage tutorials. I developed <a
