update bio, email, and reviews

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
           <address>
             <ul>
               <li><img src="assets/img/email-icon.png" alt="Email Icon" class="text-icon" /> Email: mathieu.nassif<span
-                  class="invisible"> [REMOVE THIS] </span>@mail<span class="invisible"> [AND THIS] </span>.mcgill.<span
-                  class="invisible"> [AND THAT] </span>ca</li>
+                  class="invisible"> [REMOVE THIS] </span>@canterbury<span class="invisible"> [AND THIS] </span>.ac.<span
+                  class="invisible"> [AND THAT] </span>nz</li>
               <li><img src="assets/img/mastodon-icon.svg" alt="Mastodon Icon" class="text-icon" /> Mastodon: <a
                   href="https://social.sigsoft.org/@mnassif">@mnassif@social.sigsoft.org</a></li>
               <li><img src="assets/img/github-icon.png" alt="GitHub Icon" class="text-icon" /> GitHub: <a
@@ -86,7 +86,7 @@
         </div>
         <div class="col">
           <h5>Biography</h5>
-          <p>I will soon start as a lecturer (assistant professor) in the <a href="https://www.canterbury.ac.nz/study/academic-study/engineering/schools-and-departments-engineering-forestry-product-design/computer-science-and-software-engineering-department">Computer Science and Software Engineering department</a> at the <a href="https://www.canterbury.ac.nz/">University of Canterbury</a> in Christchurch, New Zealand.</p>
+          <p>I am a lecturer (assistant professor) in the <a href="https://www.canterbury.ac.nz/study/academic-study/engineering/schools-and-departments-engineering-forestry-product-design/computer-science-and-software-engineering-department">Computer Science and Software Engineering department</a> at the <a href="https://www.canterbury.ac.nz/">University of Canterbury</a> in Christchurch, New Zealand.</p>
           <p>
             I was previously a guest researcher in the <a href="https://www.inf.uni-hamburg.de/en/inst/ab/mast/section-4-about.html">MAST group</a>, led by <a href="https://www.inf.uni-hamburg.de/en/inst/ab/mast/section-1-people/people-1-professor/maalej.html">Prof. Dr. Walid Maalej</a>, at <a href="https://www.uni-hamburg.de/en.html">University of Hamburg</a>. I completed my Ph.D. in Computer Science at <a href="https://mcgill.ca/">McGill University</a> under the
             supervision of <a href="https://www.cs.mcgill.ca/~martin/">Prof. Martin P. Robillard</a> in the <a
@@ -227,6 +227,10 @@
       <ul class="twolevels">
         <li><strong>Reviewer</strong>
           <ul>
+            <li><strong>[FSE]</strong> International Conference on the Foundations of Software Engineering, 2026</li>
+            <li><strong>[SANER]</strong> International Conference on Software Analysis, Evolution and Reengineering, Early Research Achievement, 2026; Research, 2026</li>
+            <li><strong>[MSR]</strong> International Conference on Mining Software Repositories, Data and Tool Showcase,
+              2023; Junior PC, 2025; Technical Papers, 2026</li>
             <li><strong>[EASE]</strong> International Conference on Evaluation and Assessment in Software Engineering,
               2024, 2025</li>
             <li><strong>[TOSEM]</strong> ACM Transactions on Software Engineering and Methodology, 2022, 2023, 2025</li>
@@ -235,8 +239,6 @@
               Tutorials, 2024</li>
             <li><strong>[JSS]</strong> Journal of Systems and Software, 2024</li>
             <li><strong>[DIS]</strong> ACM Conference on Designing Interactive Systems, 2024</li>
-            <li><strong>[MSR]</strong> International Conference on Mining Software Repositories, Data and Tool Showcase,
-              2023</li>
             <li><strong>[TSE]</strong> IEEE Transactions on Software Engineering, 2021</li>
           </ul>
         </li>
@@ -338,7 +340,7 @@
     <span class="line">Built with <a href="https://getbootstrap.com/">Bootstrap v4.5</a>.</span>
     <span class="line">© 2020 Mathieu Nassif</span>
     <br />
-    <span class="line"><small><em>Last update: 17 August 2025</em></small></span>
+    <span class="line"><small><em>Last update: 9 October 2025</em></small></span>
   </footer>
 
   <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
