link to UC profile

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           <h3>Mathieu Nassif, <small>Ph.D.</small></h3>
           <address>
             <ul>
+              <li><img src="https://profiles.canterbury.ac.nz/branding/favicon.ico" alt="University of Canterbury shield" class="text-icon" /> UC Profile: <a href="https://profiles.canterbury.ac.nz/Mathieu-Nassif/">Mathieu Nassif</a></li>
               <li><img src="assets/img/email-icon.png" alt="Email Icon" class="text-icon" /> Email: mathieu.nassif<span
                   class="invisible"> [REMOVE THIS] </span>@canterbury<span class="invisible"> [AND THIS] </span>.ac.<span
                   class="invisible"> [AND THAT] </span>nz</li>
@@ -340,7 +341,7 @@
     <span class="line">Built with <a href="https://getbootstrap.com/">Bootstrap v4.5</a>.</span>
     <span class="line">© 2020 Mathieu Nassif</span>
     <br />
-    <span class="line"><small><em>Last update: 9 October 2025</em></small></span>
+    <span class="line"><small><em>Last update: 15 October 2025</em></small></span>
   </footer>
 
   <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
