update meta description + add 1 PC

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description"
-    content="Mathieu Nassif is a guest researcher in the MAST group at University of Hamburg. His research interests include human aspects of software engineering, software design, documentation, and knowledge management.">
+    content="Mathieu Nassif is a lecturer in Software Engineering at the University of Canterbury, New Zealand. His research interests include human aspects of software engineering, software design, documentation, and knowledge management.">
   <meta name="keywords" content="Mathieu Nassif, Nassif Mathieu, mnassif, nassifm">
   <meta name="author" content="Mathieu Nassif">
   <title>Mathieu Nassif</title>
@@ -68,7 +68,7 @@
           <h3>Mathieu Nassif, <small>Ph.D.</small></h3>
           <address>
             <ul>
-              <li><img src="https://profiles.canterbury.ac.nz/branding/favicon.ico" alt="University of Canterbury shield" class="text-icon" /> UC Profile: <a href="https://profiles.canterbury.ac.nz/Mathieu-Nassif/">Mathieu Nassif</a></li>
+              <li><img src="assets/img/university-icon.svg" alt="University of Canterbury shield" class="text-icon" /> UC Profile: <a href="https://profiles.canterbury.ac.nz/Mathieu-Nassif/">Mathieu Nassif</a></li>
               <li><img src="assets/img/email-icon.png" alt="Email Icon" class="text-icon" /> Email: mathieu.nassif<span
                   class="invisible"> [REMOVE THIS] </span>@canterbury<span class="invisible"> [AND THIS] </span>.ac.<span
                   class="invisible"> [AND THAT] </span>nz</li>
@@ -228,6 +228,7 @@
       <ul class="twolevels">
         <li><strong>Reviewer</strong>
           <ul>
+            <li><strong>[ICPC]</strong> International Conference on Program Comprehension, Early Research Achievements, 2026</li>
             <li><strong>[FSE]</strong> International Conference on the Foundations of Software Engineering, 2026</li>
             <li><strong>[SANER]</strong> International Conference on Software Analysis, Evolution and Reengineering, Early Research Achievement, 2026; Research, 2026</li>
             <li><strong>[MSR]</strong> International Conference on Mining Software Repositories, Data and Tool Showcase,
@@ -341,7 +342,7 @@
     <span class="line">Built with <a href="https://getbootstrap.com/">Bootstrap v4.5</a>.</span>
     <span class="line">© 2020 Mathieu Nassif</span>
     <br />
-    <span class="line"><small><em>Last update: 15 October 2025</em></small></span>
+    <span class="line"><small><em>Last update: 16 October 2025</em></small></span>
   </footer>
 
   <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
